--- a/index.html
+++ b/index.html
@@ -1,52 +1,95 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Wyścigi</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-</head>
-<body>
-<div id="div_app" class="card">
-	<div class="card-header">	Wyscigi</div>
-	<div class="card-body pb-0">
-	<div id="div_ekran">
-		<p>Wynik: <span id="span_wynik">0</span></p>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Wyścigi</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <link rel="apple-touch-icon" sizes="76x76" href="src/wyscigi.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="src/wyscigi.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="src/wyscigi.png" />
+    <link rel="manifest" href="src/wyscigi.png" />
+    <link rel="mask-icon" href="src/wyscigi.png" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+  </head>
+  <body>
+    <div id="div_app" class="card">
+      <div class="card-header">Wyscigi</div>
+      <div class="card-body pb-0">
+        <div id="div_ekran">
+          <p>Wynik: <span id="span_wynik">0</span></p>
 
-
-		<div id="div_auto"></div>
-	</div>
-	<div>
-		<button class="btn btn-primary mt-1" id="button_start">Start</button>
-		<button class="btn btn-warning mt-1" id="button_lewo"><</button>
-		<button class="btn btn-warning mt-1" id="button_prawo">></button>
-	</div>
-	</div>
-	<div class="card-footer">
-				<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#info">Informacje o aplikacji</button>
-	</div>
-	</div>
-	<div class="modal fade" id="info" tabindex="-1" aria-labelledby="infoinfo" aria-hidden="true">
-	<div class="modal-dialog">
-	  <div class="modal-content">
-		<div class="modal-header">
-		  <h1 class="modal-title fs-5" id="infoinfo">Informacje o aplikacji</h1>
-		  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-		</div>
-		<div class="modal-body">
-		  <h5 class="mb-2">O aplikacji</h5>
-			Aplikacja wyświetla samochód, którym może sterować użytkownik. Losowo z każdą sekundą umieszcza samochód jadący w strone użytkownika na ekranie. Zadanie użytkownika jest jak najdłużej unikać samochodów.
-			<h5 class="mt-2">Technologie</h5>
-			HTML, CSS, JavaScript, Bootstrap
-		</div>
-		<div class="modal-footer">
-		  <button type="button" class="btn btn-success" data-bs-dismiss="modal">Zamknij</button>
-		  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-		</div>
-	  </div>
-	</div>
-  </div>
-<script type="text/javascript" src="script.js"></script>
-</body>
+          <div id="div_auto"></div>
+        </div>
+        <div>
+          <button class="btn btn-primary mt-1" id="button_start">Start</button>
+          <button class="btn btn-warning mt-1" id="button_lewo"><</button>
+          <button class="btn btn-warning mt-1" id="button_prawo">></button>
+        </div>
+      </div>
+      <div class="card-footer">
+        <button
+          type="button"
+          class="btn btn-primary"
+          data-bs-toggle="modal"
+          data-bs-target="#info"
+        >
+          Informacje o aplikacji
+        </button>
+      </div>
+    </div>
+    <div
+      class="modal fade"
+      id="info"
+      tabindex="-1"
+      aria-labelledby="infoinfo"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="infoinfo">
+              Informacje o aplikacji
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <h5 class="mb-2">O aplikacji</h5>
+            Aplikacja umożliwia użytkownikowi sterowanie autem a losowo z każdą
+            sekundą pojawiają się inne samochody jadące w jego stronę. Celem gry
+            jest jak najdłuższe unikanie innych samochodów na ekranie.
+            <h5 class="mt-2">Technologie</h5>
+            HTML, CSS, JavaScript, Bootstrap
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-success"
+              data-bs-dismiss="modal"
+            >
+              Zamknij
+            </button>
+            <script
+              src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+              integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+              crossorigin="anonymous"
+            ></script>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script type="text/javascript" src="script.js"></script>
+  </body>
 </html>
